--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,10 @@
         <!-- jquery/jqm -->
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
+		
+		<!-- CryptoJS -->
+		<script src="lib/CryptoJS-v3.1.2/components/core-min.js"></script>
+		<script src="lib/CryptoJS-v3.1.2/rollups/aes.js"></script>
 
         <!-- css -->
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
