Added a lat/lon library to easily calculate distance between 2 points.

--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,12 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- jquery/jqm -->
+        <!-- Libraries -->
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
-		
-		<!-- CryptoJS -->
 		<script src="lib/CryptoJS-v3.1.2/components/core-min.js"></script>
 		<script src="lib/CryptoJS-v3.1.2/rollups/aes.js"></script>
+		<script src="lib/latitude-longitude.js"></script>
 
         <!-- css -->
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
