--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,11 @@
 
         <!-- scripts -->
         <script src="js/events.js"></script>
+		<script src="js/init.js"></script>
 
+		<div data-role="page" id="init">
+		<!-- initial page for device ready event -->
+		</div>
 
         <div data-role="page" id="home">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
