Removed CryptoJS and LatLoong library / added md5.js library

--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,7 @@
         <!-- Libraries -->
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
-		<script src="lib/CryptoJS-v3.1.2/components/core-min.js"></script>
-		<script src="lib/CryptoJS-v3.1.2/rollups/aes.js"></script>
-		<script src="lib/latitude-longitude.js"></script>
+		<script src="lib/md5.js"></script>
 
         <!-- css -->
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
@@ -23,10 +21,6 @@
         <!-- scripts -->
         <script src="js/events.js"></script>
 		<script src="js/init.js"></script>
-
-		<div data-role="page" id="init">
-		<!-- initial page for device ready event -->
-		</div>
 
         <div data-role="page" id="home">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
