--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,20 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Firebase -->
+        <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-app.js"></script>
+        <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyDT9OMfT4bZV-rXAgn9vsWxE_hK8tB-vFY",
+            authDomain: "",
+            databaseURL: "",
+            storageBucket: "",
+          };
+          firebase.initializeApp(config);
+        </script>
+    
         <!-- Libraries -->
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
@@ -19,8 +33,8 @@
         <!-- <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" /> -->
 
         <!-- scripts -->
-        <script src="js/events.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/events.js"></script>
 
         <div data-role="page" id="home">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
