I forget the specifics..its been awhile

--- a/www/index.html
+++ b/www/index.html
@@ -116,7 +116,11 @@
 					<input type="checkbox" id="zipcodeInput" class="custom" onclick="onToggleZipcode()" />
 					<label for="zipcodeInput">By Zipcode</label>
 				</div>
-				
+				<div data-role="collapsible">
+					<h3>Reporting Smells</h3>
+					<input type="checkbox" id="reportToACHD" class="custom" onclick="onToggleACHD()" />
+					<label for="reportToACHD">Report to ACHD</label>
+				</div>
 			</div>
 			
 			<div data-role="footer" data-position="fixed">
