--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -19,13 +21,11 @@
         <!-- <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" /> -->
 
         <!-- scripts -->
-		<script src="js/app.js"></script>
-		<script src="js/events.js"></script>
+		<script src="js/constants.js"></script>
+		<script src="js/location.js"></script>
 		<script src="js/globalfunctions.js"></script>
 		<script src="js/localstorage.js"></script>
-		<script src="js/constants.js"></script>
-
-        <!-- /StatusBar -->
+		<script src="js/app.js"></script>
     
     </head>
 	
@@ -70,7 +70,7 @@
             </div>
 
             <div role="main" class="ui-content" data-iscroll style="padding:0;margin:0;">
-                <iframe id="iframe-map" src="http://staging.api.smellpittsburgh.org/visualization" width="100%" height="100%" style="padding:0;margin:0;">
+                <iframe id="iframe-map" src="http://localhost/visualization" width="100%" height="100%" style="padding:0;margin:0;">
                   <p>Your browser does not support iframes.</p>
                 </iframe>
             </div>
