Made the collapsible settings not callapsed by default

--- a/www/index.html
+++ b/www/index.html
@@ -93,13 +93,13 @@
             </div>
 			
 			<div date-role="main" class="ui-content" data-iscroll>
-				<div data-role="collapsible">
+				<div id="notificationsCollapsible" data-role="collapsible">
 					<h3>Notifications</h3>
 					<input type="checkbox" id="zipcodeInput" class="custom" onclick="onToggleZipcode()" />
 					<label for="zipcodeInput">By Zipcode</label>
 				</div>
 
-				<div data-role="collapsible">
+				<div id="reportsCollapsible" data-role="collapsible">
 					<h3>Reporting Smells</h3>
 					<input type="checkbox" id="reportToACHD" class="custom" onclick="onToggleACHD()" />
 					<label for="reportToACHD">Report to ACHD</label>
