--- a/www/index.html
+++ b/www/index.html
@@ -28,18 +28,24 @@
 	<div data-role="page" id="home" class="page-fullscreened">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
                 <h1>Smell Pittsburgh!</h1>
-				<a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
+				<a href="#settings" data-icon="gear" class="ui-btn-right" data-transition="none">Settings</a>
             </div>
 
             <div role="main" class="ui-content" data-iscroll>
                 <h2>How does it smell to you right now?</h2>
-                <input type="range" name="slider_smell_value" id="slider_smell_value" value="1" min="1" max="5" step="1">
-                <ul>
-                    <li>1 Just fine!</li>
-                    <li>2 Barely noticeable</li>
-                    <li>3 Definitely noticeable</li>
-                    <li>4 It's getting pretty bad</li>
-                    <li>5 About as bad as it gets!</li>
+				<div data-role="controlgroup" data-type="horizontal">
+					<button id="smell_value_1" class="remove-active ui-btn ui-corner-all ui-btn-active" onclick="onClickSmell(this);" value="1">1</button>
+					<button id="smell_value_2" class="remove-active ui-btn ui-corner-all" onclick="onClickSmell(this);" value="2">2</button>
+					<button id="smell_value_3" class="remove-active ui-btn ui-corner-all"onclick="onClickSmell(this);" value="3">3</button>
+					<button id="smell_value_4" class="remove-active ui-btn ui-corner-all" onclick="onClickSmell(this);" value="4">4</button>
+					<button id="smell_value_5" class="remove-active ui-btn ui-corner-all" onclick="onClickSmell(this);" value="5">5</button>
+				</div>
+                <ul style="list-style-type: square;">
+                    <li style="color: rgb(0,255,0);"><span style="color: black;">1 Just fine!</span></li>
+                    <li style="color: rgb(248,229,64);"><span style="color: black;">2 Barely noticeable</span></li>
+                    <li style="color: rgb(218,136,0);"><span style="color: black;">3 Definitely noticeable</span></li>
+                    <li style="color: rgb(235,38,103);"><span style="color: black;">4 It's getting pretty bad</span></li>
+                    <li style="color: rgb(95,14,54);"><span style="color: black;">5 About as bad as it gets!</span></li>
                 </ul>
 
                 <label>Describe the smell (optional)</label>
@@ -53,7 +59,7 @@
             <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
                 <div data-role="navbar">
                   <ul>
-                    <li><a href="#home" data-icon="home"class="ui-btn-active ui-state-persist" data-transition="none">Smell Report</a></li>
+                    <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="none">Smell Report</a></li>
                     <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
                   </ul>
                 </div>
