removed 'disabled' and changed to pagecontainer page transitioning

--- a/www/index.html
+++ b/www/index.html
@@ -98,10 +98,10 @@
                     <label for="checkbox_notifications">Receive General App Notifications</label>
                     <input type="checkbox" id="checkbox_notifications" />
                     <label for="checkbox_smell_notifications">Smell Notification Range</label>
-                    <input type="checkbox" id="checkbox_smell_notifications" disabled />
+                    <input type="checkbox" id="checkbox_smell_notifications" />
                     <label for="slider_smell_notification"></label>
                     <ul style="list-style-type: none;">
-                        <li><input type="range" name="slider_smell_notification" id="slider_smell_notification" data-highlight="true" value="4" min="1" max="5" step="1" disabled /></li>
+                        <li><input type="range" name="slider_smell_notification" id="slider_smell_notification" data-highlight="true" value="4" min="1" max="5" step="1" /></li>
                     </ul>
                     <p id="p_slider_info"></p>
                 </div>
