Slider now works! sort of...

--- a/www/index.html
+++ b/www/index.html
@@ -30,12 +30,17 @@
             <div role="main" class="ui-content" data-iscroll>
                 <h3>How does it smell to you right now?</h3>
                 <div data-role="navbar">
+                    <label for="smell_value_1"></label>
+                    <label for="smell_value_2"></label>
+                    <label for="smell_value_3"></label>
+                    <label for="smell_value_4"></label>
+                    <label for="smell_value_5"></label>
                     <ul>
-                        <li><button id="smell_value_1" class="remove-active ui-btn ui-corner-all ui-btn-active" onclick="HomePage.onClickSmell(this);" value="1">1</button></li>
-                        <li><button id="smell_value_2" class="remove-active ui-btn ui-corner-all" onclick="HomePage.onClickSmell(this);" value="2">2</button></li>
-                        <li><button id="smell_value_3" class="remove-active ui-btn ui-corner-all" onclick="HomePage.onClickSmell(this);" value="3">3</button></li>
-                        <li><button id="smell_value_4" class="remove-active ui-btn ui-corner-all" onclick="HomePage.onClickSmell(this);" value="4">4</button></li>
-                        <li><button id="smell_value_5" class="remove-active ui-btn ui-corner-all" onclick="HomePage.onClickSmell(this);" value="5">5</button></li>
+                        <li><button id="smell_value_1" class="remove-active" onclick="HomePage.onClickSmell(this);" value="1">1</button></li>
+                        <li><button id="smell_value_2" class="remove-active" onclick="HomePage.onClickSmell(this);" value="2">2</button></li>
+                        <li><button id="smell_value_3" class="remove-active" onclick="HomePage.onClickSmell(this);" value="3">3</button></li>
+                        <li><button id="smell_value_4" class="remove-active" onclick="HomePage.onClickSmell(this);" value="4">4</button></li>
+                        <li><button id="smell_value_5" class="remove-active" onclick="HomePage.onClickSmell(this);" value="5">5</button></li>
                     </ul>  
                 </div>
 
