Startup explanation and phone number/name fields

--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,9 @@
                     <h3>Reporting Smells</h3>
                     <label for="textfield_email">Report to ACHD</label>
                     <ul style="list-style-type: none;">
-                        <li><input type="text" name="textfield_email" id="textfield_email" value="" placeholder="Enter your email" data-clear-btn="true" /></li>
+                        <li><input type="text" name="textfield_name" id="textfield_name" placeholder="Your name" data-clear-btn="true"/></li>
+                        <li><input type="text" name="textfield_email" id="textfield_email" value="" placeholder="Enter your email" data-clear-btn="true"/></li>
+                        <li><input type="tel" name="textfield_phone" id="textfield_phone" placeholder="999-999-9999" data-clear-btn="true"/></li>
                     </ul>
                 </div>
             </div>
@@ -135,8 +137,17 @@
                 <h1>Smell PGH</h1>
             </div>
 
-            <div role="main" class="ui-content" data-iscroll style="padding:0;margin:0;">
-                <h3>Explantion goes here</h3>
+            <div role="main" class="ui-content">
+                <!--<div style="position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);">-->
+                    <h3>Welcome to Smell PGH!</h3>
+                    <p>
+                        Thank you for installing the Smell Pittsburgh mobile app! Along with displaying all smell reports from its users,
+                        Smell Pittsburgh automatically submits these reports to the Allegheny County Health Department (ACHD).
+                    </p>
+                    <p>
+                        In order to improve the effectiveness of user reports, please provide your name and email (and optionally a phone number) on the next screen.
+                    </p>
+                <!--</div>-->
             </div>
 
             <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
