--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script src="lib/md5.js"></script>
+        <script src="lib/fastclick.min.js"></script>
 
         <!-- css -->
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
